# pydpiper-shell

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  install.bat  install.sh  license.md  pyproject.toml  setup.cfg
src/auditor/: model.py
src/auditor/controllers/: audit_controller.py  report_controller.py
src/auditor/dom/: builder.py  core.py  models.py  qngine.py  registry.py
src/auditor/dom/elements/: head.py  link.py  (+2 more)
src/auditor/managers/: audit_data_manager.py  audit_ignore_manager.py
src/auditor/server/: app.py
src/auditor/services/: pagerank_service.py
src/auditor/utils/: launcher.py  stopwords.py
src/crawler/: model.py
src/crawler/controllers/: async_controller.py  async_crawl_controller.py
src/crawler/managers/: adaptive_worker_manager.py  crawl_data_manager.py  progress_manager.py
src/crawler/page_filters/: nike_product_filter.py  page_filter_base.py  product_page_filter.py  smart_product_filter.py
src/crawler/services/: async_page_fetcher_service.py  data_prepare_service.py  generate_default_user_agent_service.py  http_request_service.py  image_parse_service.py  link_processor_service.py  redirect_resolver_service.py  request_to_link_status_propagator_service.py  robots_txt_service.py
src/crawler/utils/: log_request.py  propagation_graph.py  run_timers.py  url_utils.py
src/parser/: model.py
src/parser/controllers/: parse_controller.py
src/parser/services/: image_parse_service.py  page_parse_service.py
src/pydpiper_shell/: app.py  database_schema.py  model.py  settings.json
src/pydpiper_shell/core/: command_registry.py  core.py  discovery.py  filter_registry.py  loop_runner.py  parser.py  xngine.py
tests/: performance_test.py  test_integration.txt
tests/core/: test_config_management.py  test_crawler_handler.py  test_database_managenent.py  test_history_management.py  test_parser.py  test_project_handler.py  test_xngine.py
(+56 files in other folders)
