[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydpiper-shell"
version = "0.1.0"
description = "Interactive shell for managing crawler and processing stack"
authors = [
    { name="Daniel Mulder", email="daniel.mulder.nl@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "aiohttp>=3.12.15",
    "pydantic>=2.11.9",
    "pydantic_core>=2.33.2",
    "python-dotenv>=1.1.1",
    "SQLAlchemy>=2.0.44",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "beautifulsoup4>=4.13.5",
    "lxml>=6.0.2",
    "tldextract>=5.3.0",
    "psutil>=7.1.0",
    "prompt_toolkit>=3.0.52",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "colorama>=0.4.6",
    "requests>=2.32.5",
    "Scrapy>=2.13.3",
    "Flask>=3.0.0",
    "networkx>=3.0",
    "scipy>=1.10.0",
    "records",
]

[project.scripts]
pydpiper = "pydpiper_shell.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]

# --- NIEUW: Onderdruk die irritante async waarschuwingen in pytest ---
[tool.pytest.ini_options]
filterwarnings = [
    "ignore:coroutine '_run_crawl_task' was never awaited:RuntimeWarning",
]