[metadata]
name = pydpiper-shell
version = 0.1.0
description = First release PydPiper interactive shell
long_description = file: README.md
long_description_content_type = text/markdown
author = Daniel Mulder
author_email = daniel.mulder.nl@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.extras_require]
dev =
    pytest
    black
    isort
